--- a/.github/workflows/Update.yml
+++ b/.github/workflows/Update.yml
@@ -21,12 +21,12 @@ jobs:
 
     - name: Set git
       run : |
-        git config --global user.email "jsjson@163.com"
-        git config --global user.name "xiangfeidexiaohuo"
+        git config --global user.email "109743406+zijieKwok@users.noreply.github.com"
+        git config --global user.name "zijieKwok"
         sudo timedatectl set-timezone "Asia/Shanghai"
 
     - name: Delete workflow runs
-      uses: xiangfeidexiaohuo/delete-workflow-runs@main
+      uses: zijieKwok/delete-workflow-runs@main
       continue-on-error: true
       with:
         retain_days: 1
@@ -101,7 +101,7 @@ jobs:
         rm -rf ./op-oaf/README.md
 
         
-        git clone https://github.com/xiaorouji/openwrt-passwall-packages ./patch/wall
+        git clone https://github.com/zijieKwok/passwall-packages ./patch/wall
         rm -rf ./patch/wall/.github
         
         git clone https://github.com/fw876/helloworld ./patch/wall/helloworld
@@ -111,7 +111,7 @@ jobs:
         mv ./patch/wall/helloworld/luci-app-ssr-plus ./patch/wall-luci/
         rm -rf ./patch/wall/helloworld
         
-        git clone https://github.com/xiaorouji/openwrt-passwall ./patch/wall-luci/pass
+        git clone https://github.com/zijieKwok/JacKwok-passwall ./patch/wall-luci/pass
         git clone https://github.com/xiaorouji/openwrt-passwall2 ./patch/wall-luci/pass2
         mv ./patch/wall-luci/pass/luci-app-passwall ./patch/wall-luci/
         mv ./patch/wall-luci/pass2/luci-app-passwall2 ./patch/wall-luci/
