--- a/.github/workflows/luci-app-tailscale.yml
+++ b/.github/workflows/luci-app-tailscale.yml
@@ -39,8 +39,8 @@ jobs:
         
          
         git clone https://github.com/asvow/luci-app-tailscale.git ./luci-app-tailscale
-        
-        
+        rm -rf ./.gitignore
+        rm -rf ./LICENSE
         
         
 
