--- a/.github/workflows/luci-app-tailscale.yml
+++ b/.github/workflows/luci-app-tailscale.yml
@@ -36,13 +36,13 @@ jobs:
       run: |
 
         rm -rf ./luci-app-tailscale
-        
+        rm -rf ./tailscale
          
         git clone https://github.com/asvow/luci-app-tailscale.git ./luci-app-tailscale
         rm -rf ./.gitignore
         rm -rf ./LICENSE
         
-        
+        git clone https://github.com/openwrt/packages.git -b /openwrt-24.10/net/tailscale
 
         
     - name: Apply
