--- a/.github/workflows/tailscale.yml
+++ b/.github/workflows/tailscale.yml
@@ -38,7 +38,7 @@ jobs:
         rm -rf ./tailscale
         
          
-        git clone https://github.com/openwrt/packages.git ./net/packages/tailscale
+        git clone https://github.com/openwrt/packages.git -b /net/packages/tailscale
         
         
         
