--- a/.github/workflows/tailscale.yml
+++ b/.github/workflows/tailscale.yml
@@ -39,7 +39,7 @@ jobs:
         
          
         git clone --depth=1 https://github.com/openwrt/packages -b openwrt-24.10/net/tailscale
-        mv ./tailscale ./tailscale
+        mv ./tailscale/tailscale ./tailscale
         rm -rf ./tailscale
         
         
