--- a/.github/workflows/tailscale.yml
+++ b/.github/workflows/tailscale.yml
@@ -38,7 +38,7 @@ jobs:
         rm -rf ./tailscale
         
          
-        git clone https://github.com/openwrt/packages -b openwrt-24.10/net/tailscale
+        git clone --depth=1 https://github.com/openwrt/packages -b /openwrt-24.10/net/tailscale
         
         
         
