--- a/.github/workflows/tailscale.yml
+++ b/.github/workflows/tailscale.yml
@@ -38,7 +38,7 @@ jobs:
         rm -rf ./tailscale
         
          
-        git_sparse_clone openwrt-24.10 "https://github.com/openwrt/packages" /net/tailscale
+        git_sparse_clone openwrt-24.10 https://github.com/openwrt/packages /net/tailscale
         
         
         
