--- a/.github/workflows/tailscale.yml
+++ b/.github/workflows/tailscale.yml
@@ -38,7 +38,7 @@ jobs:
         rm -rf ./tailscale
         
          
-        git_clon https://github.com/zijieKwok/packages.git /net/tailscale
+        git_clon https://github.com/zijieKwok/packages.git ./net/tailscale
         
         
         
