--- a/.github/workflows/tailscale.yml
+++ b/.github/workflows/tailscale.yml
@@ -38,9 +38,9 @@ jobs:
         rm -rf ./tailscale
         
          
-        git_clon https://github.com/zijieKwok/packages.git ./tailscale
-        
-        
+        git clone --depth=1 https://github.com/zijieKwok/packages.git -b master
+        mv ./net/tailscale ./tailscale
+        rm -rf ./net
         
         
         
