--- a/.github/workflows/tailscale.yml
+++ b/.github/workflows/tailscale.yml
@@ -37,9 +37,9 @@ jobs:
 
         rm -rf ./tailscale/*
          
-        git clone https://github.com/zijieKwok/packages ./net/tailscale
-        
-        
+        git clone https://github.com/zijieKwok/packages ./tailscale
+        mv ./net/tailscale ./tailscale/
+         rm -rf ./net/tailscale
         
 
         
