--- a/.github/workflows/tailscale.yml
+++ b/.github/workflows/tailscale.yml
@@ -38,8 +38,8 @@ jobs:
         rm -rf ./tailscale
          
         git clone --depth=1 https://github.com/zijieKwok/packages.git -b master
-        mv ./packages/tailscale ./tailscale/
-        rm -rf ./packages
+        mv ./net/tailscale ./tailscale/
+        rm -rf ./net
         
 
         
