--- a/.github/workflows/tailscale.yml
+++ b/.github/workflows/tailscale.yml
@@ -37,8 +37,8 @@ jobs:
 
         rm -rf ./tailscale
          
-        git clone --depth=1 https://github.com/zijieKwok/packages.git -b master
-        mv ./net/tailscale ./tailscale/
+        git clone https://github.com/zijieKwok/packages.git ./tailscale
+        
         
         
 
