--- a/.github/workflows/tailscale.yml
+++ b/.github/workflows/tailscale.yml
@@ -37,7 +37,7 @@ jobs:
 
         rm -rf ./tailscale
          
-        git clone https://github.com/zijieKwok/packages.git ./tailscale
+        git clone https://github.com/zijieKwok/packages.git ./net/tailscale
         
         
         
