--- a/.github/workflows/tailscale.yml
+++ b/.github/workflows/tailscale.yml
@@ -37,9 +37,9 @@ jobs:
 
         rm -rf ./tailscale
          
-        git clone https://github.com/zijieKwok/packages.git ./tailscale
-        mv ./packages/tailscale ./tailscale/
-        rm -rf ./packages
+        git clone https://github.com/zijieKwok/packages ./tailscale
+        
+        
         
 
         
