--- a/.github/workflows/luci-app-onliner.yml
+++ b/.github/workflows/luci-app-onliner.yml
@@ -39,8 +39,8 @@ jobs:
         
          
         git clone https://github.com/kiddin9/kwrt-packages.git ./luci-app-onliner
+        mv ./onliner/luci-app-onliner ./luci-app-onliner/
         rm -rf ./luci-app-onliner/README.md
-        
         
         
 
