--- a/.github/workflows/luci-app-onliner.yml
+++ b/.github/workflows/luci-app-onliner.yml
@@ -39,7 +39,7 @@ jobs:
         
          
         git clone https://github.com/kiddin9/kwrt-packages.git ./luci-app-onliner
-        mv ./luci-app-onliner/ ./
+        mv ./onliner/luci-app-onliner/ ./
         rm -rf ./luci-app-onliner/README.md
         
         
