--- a/.github/workflows/luci-app-onliner.yml
+++ b/.github/workflows/luci-app-onliner.yml
@@ -35,10 +35,10 @@ jobs:
     - name: Update
       run: |
 
-        rm -rf ./luci-app-onliner
+        # rm -rf ./luci-app-onliner
         
          
-        # git clone https://github.com/kiddin9/kwrt-packages ./luci-app-onliner
+        git clone https://github.com/kiddin9/kwrt-packages ./luci-app-onliner
         
         
         
