--- a/.github/workflows/luci-app-onliner.yml
+++ b/.github/workflows/luci-app-onliner.yml
@@ -35,12 +35,12 @@ jobs:
     - name: Update
       run: |
 
-        # rm -rf ./luci-app-onliner
+        rm -rf ./luci-app-onliner
         
          
-        git clone https://github.com/kiddin9/kwrt-packages ./luci-app-onliner
-        
-        
+        git clone --depth=1 https://github.com/kiddin9/kwrt-packages -b master
+        mv ./kwrt-packages/luci-app-onliner ./luci-app-onliner/
+        rm -rf ./kwrt-package
         
         
 
