--- a/.github/workflows/luci-app-onliner.yml
+++ b/.github/workflows/luci-app-onliner.yml
@@ -36,9 +36,9 @@ jobs:
       run: |
 
         rm -rf ./luci-app-onliner
-        rm -rf ./kwrt-packages
+        
          
-        # git clone https://github.com/rufengsuixing/luci-app-onliner ./luci-app-onliner
+        git clone https://github.com/rufengsuixing/luci-app-onliner ./luci-app-onliner
         
         
         
