--- a/.github/workflows/luci-app-onliner.yml
+++ b/.github/workflows/luci-app-onliner.yml
@@ -38,7 +38,7 @@ jobs:
         rm -rf ./luci-app-onliner/*
         
          
-        git clone https://github.com/rufengsuixing/luci-app-onliner ./luci-app-onliner
+        # git clone https://github.com/rufengsuixing/luci-app-onliner ./luci-app-onliner
         
         
         
