--- a/.github/workflows/luci-app-onliner.yml
+++ b/.github/workflows/luci-app-onliner.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Update
       run: |
 
-        rm -rf ./luci-app-onliner/*
+        rm -rf ./luci-app-onliner
         
          
         # git clone https://github.com/rufengsuixing/luci-app-onliner ./luci-app-onliner
