--- a/.github/workflows/Update mosdns.yml
+++ b/.github/workflows/Update mosdns.yml
@@ -38,11 +38,11 @@ jobs:
         rm -rf ./op-mosdns
         
          
-        git clone https://github.com/xiangfeidexiaohuo/extra-ipk ./op-mosdns
-        git clone https://github.com/xiangfeidexiaohuo/extra-ipk ./op-mosdns/v2ray-geodata
-        rm -rf ./op-mosdns/install.sh
-        rm -rf ./op-mosdns/.github
-        rm -rf ./op-mosdns/README.md
+        # git clone https://github.com/xiangfeidexiaohuo/extra-ipk ./op-mosdns
+        # git clone https://github.com/xiangfeidexiaohuo/extra-ipk ./op-mosdns/v2ray-geodata
+        # rm -rf ./op-mosdns/install.sh
+        # rm -rf ./op-mosdns/.github
+        # rm -rf ./op-mosdns/README.md
         
 
         
