--- a/.github/workflows/Update mosdns.yml
+++ b/.github/workflows/Update mosdns.yml
@@ -38,13 +38,13 @@ jobs:
         rm -rf ./op-mosdns
         
          
-        # git clone https://github.com/xiangfeidexiaohuo/extra-ipk ./op-mosdns
-        # git clone https://github.com/xiangfeidexiaohuo/extra-ipk ./op-mosdns/v2ray-geodata
+        git clone https://github.com/xiangfeidexiaohuo/extra-ipk ./op-mosdns
+        git clone https://github.com/xiangfeidexiaohuo/extra-ipk ./op-mosdns/v2ray-geodata
         mv ./xiangfeidexiaohuo/extra-ipk/op-mosdns ./op-mosdns/
         rm -rf ./xiangfeidexiaohuo/extra-ipk
-        # rm -rf ./op-mosdns/install.sh
-        # rm -rf ./op-mosdns/.github
-        # rm -rf ./op-mosdns/README.md
+        rm -rf ./op-mosdns/install.sh
+        rm -rf ./op-mosdns/.github
+        rm -rf ./op-mosdns/README.md
         
 
         
