--- a/.github/workflows/Update mosdns.yml
+++ b/.github/workflows/Update mosdns.yml
@@ -40,8 +40,8 @@ jobs:
          
         git clone https://github.com/xiangfeidexiaohuo/extra-ipk ./op-mosdns
         git clone https://github.com/xiangfeidexiaohuo/extra-ipk ./op-mosdns/v2ray-geodata
-        mv ./op-mosdns/* ./op-mosdns/
-        # rm -rf ./op-mosdns
+        mv ./op-mosdns/op-mosdns/* ./op-mosdns/
+        rm -rf ./op-mosdns
         rm -rf ./op-mosdns/install.sh
         rm -rf ./op-mosdns/.github
         rm -rf ./op-mosdns/README.md
