--- a/.github/workflows/Update mosdns.yml
+++ b/.github/workflows/Update mosdns.yml
@@ -38,12 +38,12 @@ jobs:
         rm -rf ./op-mosdns
         
          
-        git clone https://github.com/sbwml/luci-app-mosdns -b v5 ./op-mosdns/tmp
+        git clone https://github.com/sbwml/luci-app-mosdns -b v5-lua ./op-mosdns/tmp
         mv ./op-mosdns/tmp/luci-app-mosdns ./op-mosdns/
         mv ./op-mosdns/tmp/mosdns ./op-mosdns/
         mv ./op-mosdns/tmp/v2dat ./op-mosdns/
         rm -rf ./op-mosdns/tmp     
-        git clone git clone https://github.com/sbwml/v2ray-geodata ./op-mosdns/v2ray-geodata
+        git clone https://github.com/sbwml/v2ray-geodata ./op-mosdns/v2ray-geodata
         
 
         
