--- a/.github/workflows/Update mosdns.yml
+++ b/.github/workflows/Update mosdns.yml
@@ -35,15 +35,15 @@ jobs:
     - name: Update
       run: |
 
-        rm -rf ./op-mosdns
+        rm -rf ./op-mosdns/v2ray-geodata
         
          
-        git clone https://github.com/sbwml/luci-app-mosdns -b v5-lua ./op-mosdns/tmp
-        mv ./op-mosdns/tmp/luci-app-mosdns ./op-mosdns/
-        mv ./op-mosdns/tmp/mosdns ./op-mosdns/
-        mv ./op-mosdns/tmp/v2dat ./op-mosdns/
-        rm -rf ./op-mosdns/tmp     
-        git clone https://github.com/sbwml/v2ray-geodata ./op-mosdns/v2ray-geodata
+        # git clone https://github.com/sbwml/luci-app-mosdns -b v5-lua ./op-mosdns/tmp
+        # mv ./op-mosdns/tmp/luci-app-mosdns ./op-mosdns/
+        # mv ./op-mosdns/tmp/mosdns ./op-mosdns/
+        # mv ./op-mosdns/tmp/v2dat ./op-mosdns/
+        # rm -rf ./op-mosdns/tmp     
+        # git clone https://github.com/sbwml/v2ray-geodata ./op-mosdns/v2ray-geodata
         
 
         
