--- a/.github/workflows/passwall.Update.yml
+++ b/.github/workflows/passwall.Update.yml
@@ -35,81 +35,14 @@ jobs:
     - name: Update
       run: |
 
-        # rm -rf ./luci-app-pushbot
-        # rm -rf ./luci-app-wechatpush
-        # rm -rf ./luci-app-easymesh
-        # rm -rf ./luci-app-ikoolproxy
-        # rm -rf ./luci-app-unblockneteasemusic
-        # rm -rf ./linkease/*   
-        # rm -rf ./op-oaf
-        # rm -rf ./op-mosdns
-        # rm -rf ./op-alist/*
-        # rm -rf ./op-ddnsgo/*
-        # rm -rf ./op-lucky/*
-        # rm -rf ./op-xunlei/*
-        # rm -rf ./patch/wall/*
         rm -rf ./patch/wall-luci/luci-app-passwall
-        # rm -rf ./patch/wall-luci/luci-app-passwall2
-        # rm -rf ./patch/wall-luci/luci-app-ssr-plus
-        rm -rf ./patch/wall-luci/luci-app-openclash
-        # rm -rf ./op-smartdns/luci-app-smartdns
-        # rm -rf ./theme/luci-theme-argon-18.06
-        # rm -rf ./theme/luci-theme-argon
-        # rm -rf ./luci-app-oled
-        # rm -rf ./op-go-aliyundrive/*
+        
         
          
-        # git clone https://github.com/zzsj0928/luci-app-pushbot ./luci-app-pushbot
-        # rm -rf ./luci-app-pushbo/README.md
-        # git clone https://github.com/tty228/luci-app-wechatpush ./luci-app-wechatpush
-        # rm -rf ./luci-app-wechatpush/README.md
-        # rm -rf ./luci-app-wechatpush/README_en.md
-        # git clone https://github.com/stevenke1981/luci-app-easymesh ./luci-app-easymesh
-        # rm -rf ./luci-app-easymesh/README.md
-        # git clone https://github.com/ilxp/luci-app-ikoolproxy ./luci-app-ikoolproxy
-        # rm -rf ./luci-app-ikoolproxy/.github
-        # rm -rf ./luci-app-ikoolproxy/change.log
-        # rm -rf ./luci-app-ikoolproxy/development.doc
-        # rm -rf ./luci-app-ikoolproxy/README.md
+        
 
        
-        # git clone https://github.com/linkease/nas-packages-luci ./linkease/nas-packages-luci
-        # mv ./linkease/nas-packages-luci/luci ./linkease/
-        # rm -rf ./linkease/nas-packages-luci
         
-        # git clone https://github.com/linkease/nas-packages ./linkease/nas-packages
-        # mv ./linkease/nas-packages/multimedia/ffmpeg-remux ./linkease/nas-packages/
-        # mv ./linkease/nas-packages/network/services/* ./linkease/nas-packages/
-        # rm -rf ./linkease/nas-packages/multimedia
-        # rm -rf ./linkease/nas-packages/network
-        # rm -rf ./linkease/nas-packages/.git
-        # rm -rf ./linkease/nas-packages/README.md
-        
-        # git clone https://github.com/linkease/istore ./linkease/iStore
-        # mv ./linkease/iStore/luci/*  ./linkease/luci/
-        # rm -rf ./linkease/iStore
-
-        # git clone https://github.com/linkease/istore-ui ./linkease/istore-ui
-        # mv ./linkease/istore-ui/app-store-ui ./linkease/luci/
-        # rm -rf ./linkease/istore-ui  
-
-        # git clone https://github.com/jerrykuku/go-aliyundrive-webdav ./op-go-aliyundrive/go-aliyundrive-webdav
-        # git clone https://github.com/jerrykuku/luci-app-go-aliyundrive-webdav ./op-go-aliyundrive/luci-app-go-aliyundrive-webdav
-
-
-        # git clone https://github.com/destan19/OpenAppFilter ./op-oaf
-        # rm -rf ./op-oaf/README.md
-
-        
-        # git clone https://github.com/zijieKwok/passwall-packages ./patch/wall
-        # rm -rf ./patch/wall/.github
-        
-        # git clone https://github.com/fw876/helloworld ./patch/wall/helloworld
-        # mv ./patch/wall/helloworld/redsocks2 ./patch/wall/
-        # mv ./patch/wall/helloworld/lua-neturl ./patch/wall/
-        # mv ./patch/wall/helloworld/shadow-tls ./patch/wall/
-        # mv ./patch/wall/helloworld/luci-app-ssr-plus ./patch/wall-luci/
-        # rm -rf ./patch/wall/helloworld
         
         git clone https://github.com/zijieKwok/JacKwok-passwall ./patch/wall-luci/pass
         # git clone https://github.com/xiaorouji/openwrt-passwall2 ./patch/wall-luci/pass2
@@ -118,56 +51,20 @@ jobs:
         rm -rf ./patch/wall-luci/pass
         # rm -rf ./patch/wall-luci/pass2
 
-        git clone --depth=1 https://github.com/vernesong/OpenClash.git -b dev
-        mv ./OpenClash/luci-app-openclash ./patch/wall-luci/
-        rm -rf ./OpenClash
-
-        # git clone https://github.com/sbwml/luci-app-mosdns ./op-mosdns
-        # git clone https://github.com/sbwml/v2ray-geodata ./op-mosdns/v2ray-geodata
-        # rm -rf ./op-mosdns/install.sh
-        # rm -rf ./op-mosdns/.github
-        # rm -rf ./op-mosdns/README.md
-        # git clone https://github.com/sbwml/openwrt-alist ./op-alist/
-        # rm -rf ./op-alist/.github
-        # rm -rf ./op-alist/README.md
-        # rm -rf ./op-alist/install.sh
-        # git clone https://github.com/UnblockNeteaseMusic/luci-app-unblockneteasemusic ./luci-app-unblockneteasemusic/
-        # rm -rf ./luci-app-unblockneteasemusic/.github
-        # rm -rf ./luci-app-unblockneteasemusic/README.md
- 
-       
-        # git clone https://github.com/sirpdboy/luci-app-ddns-go ./op-ddnsgo/
-        # git clone https://github.com/sirpdboy/luci-app-lucky ./op-lucky/
-        # rm -rf ./op-lucky/README.md
-        # rm -rf ./op-ddnsgo/README.md
-
-       
-        # git clone https://github.com/pymumu/luci-app-smartdns -b lede ./op-smartdns/luci-app-smartdns
-        # rm -rf ./op-smartdns/luci-app-smartdns/.git
-
-
-        # git clone https://github.com/jerrykuku/luci-theme-argon ./theme/luci-theme-argon
-        # git clone https://github.com/jerrykuku/luci-theme-argon -b 18.06 ./theme/luci-theme-argon-18.06          
-        # rm -rf ./theme/luci-theme-argon/.github
-        # rm -rf ./theme/luci-theme-argon/.gitignore
-        # rm -rf ./theme/luci-theme-argon-18.06/.github
-        # rm -rf ./theme/luci-theme-argon-18.06/.gitignore       
-        # rm -rf ./theme/luci-theme-argon/README*
-        # rm -rf ./theme/luci-theme-argon/RELEASE*
-        # rm -rf ./theme/luci-theme-argon-18.06/README*
         
-        # git clone https://github.com/unifreq/luci-app-oled ./oled
-        # mv ./oled/luci-app-oled ./
-        # rm -rf ./oled
-      
-        # git clone https://github.com/gngpp/thunder ./op-xunlei/xunlei
-        # mv ./op-xunlei/xunlei/openwrt/* ./op-xunlei/
-        # rm -rf ./op-xunlei/xunlei
 
         
     - name: Apply
       run: |
+        Emoji=("🎉" "🤞" "✨" "🎁" "🎈" "🎄" "🎨" "💋" "🍓" "🍕" "🍉" "💐" "🌴" "🚀" "🛸" "🗽" "⛅" "🌈" "🔥" "⛄" "🐶" "🏅" "🦄" "🐤")
         git add .
-        git commit -m "Auto Sync: $(date +%Y-%m-%d" "%H:%M)"
-        git push -f 
-              
+        git commit -m "${Emoji[$[$RANDOM % ${#Emoji[@]}]]} Sync $(date +%Y-%m-%d" "%H:%M:%S)"
+        for pkg in $(git diff-tree --no-commit-id --name-only HEAD); do
+          if [ "$(grep "PKG_RELEASE" $pkg/Makefile)" ]; then
+            sed -i "s/PKG_RELEASE:=.*/PKG_RELEASE:=$(git rev-list --count main $pkg)/" $pkg/Makefile || true
+          fi
+        done
+        git reset --soft HEAD^
+        git add .
+        git commit -m "${Emoji[$[$RANDOM % ${#Emoji[@]}]]} Sync $(date +%Y-%m-%d" "%H:%M:%S)"
+        git push -f
