--- a/.github/workflows/Update.tailscale.yml
+++ b/.github/workflows/Update.tailscale.yml
@@ -34,13 +34,13 @@ jobs:
     - name: Update.tailscale
       run: |
 
-        rm -rf ./tailscale/tailscale
-        # rm -rf ./packages
+        rm -rf ./tailscale
+        
         
          
-        git clone --depth=1 https://github.com/openwrt/packages -b openwrt-24.10
-        mv ./packages/net/tailscale ./tailscale/
-        rm -rf ./packages
+        # git clone --depth=1 https://github.com/openwrt/packages -b openwrt-24.10
+        # mv ./packages/net/tailscale ./
+        # rm -rf ./packages
         
         
         
