--- a/.github/workflows/Update.tailscale.yml
+++ b/.github/workflows/Update.tailscale.yml
@@ -38,9 +38,9 @@ jobs:
         
         
          
-        # git clone --depth=1 https://github.com/openwrt/packages -b openwrt-24.10
-        # mv ./packages/net/tailscale ./
-        # rm -rf ./packages
+        git clone --depth=1 https://github.com/openwrt/packages -b openwrt-24.10
+        mv ./packages/net/tailscale ./
+        rm -rf ./packages
         
         
         
